--- a/salon.html
+++ b/salon.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    <header style="background-image: Images/Photo de couverture.png; background-size: cover; background-position: center;">
+    <header style="background-image:url('Images/Photo de couverture.png'); background-size: cover; background-position: center;">
         <h1>Beauty Nat'hair</h1>
         <nav>
             <ul>
